samples/guestbook/ingress-http.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: guestbook-ingress-http
spec:
  rules:
  - host: guestbook.tap.h2o-2-2257.h2o.vmware.com
    http:
      paths:
      - backend:
          serviceName: guestbook
          servicePort: 80
